2006-06-01  Matt Swift <swift@alum.mit.edu>  (tiny change)

	* tramp.el (tramp-make-copy-program-file-name): Quote LOCALNAME.

2006-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-debug-buffer): `outline-mode' must be
	protected with a local `default-directory'.

	* tramp-cache.el (top): When reading
	`tramp-persistency-file-name', discard error messages for
	'file-error.

2006-05-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.6 released.

	* tramp.el (tramp-wrong-passwd-regexp): Add PuTTY message.
	(tramp-register-file-name-handlers): `partial-completion-mode' is
	unknown to XEmacs.
	(tramp-time-diff): Don't use `floor', it might fail for large
	differences.

	* tramp-efs.el:
	* tramp-ftp.el: Parse "~/.netrc" for completion also under MS
	Windows.

2006-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-initial-commands): Removed.
	(tramp-remote-process-environment): Add the settings from
	`tramp-initial-commands' here.
	(tramp-file-name-handler-alist, tramp-file-name-for-operation):
	Add `executable-find' entry.
	(tramp-message): Apply `save-match-data'.
	(tramp-do-copy-or-rename-file-out-of-band): `executable-find' must
	be called locally.
	(tramp-handle-executable-find): New defun.
	(tramp-process-one-action)
	(tramp-open-connection-setup-interactive-shell): Remove some
	messages.  Send the "unset" commands as one bunch for
	optimization.
	(defun tramp-send-command-internal): Remove the MSG parameter.

	* tramp-smb.el (tramp-smb-open-connection): `executable-find' must
	be called locally.

	* tramp-util.el (tramp-advice-executable-find)
	(start-process-shell-command)
	(tramp-advice-call-process-shell-command): New defadvices.
	(tramp-advice-start-process, tramp-advice-call-process): Don't
	apply parameter lists explicitely.

2006-05-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message): Write into debug buffer only if
	`tramp-verbose-level' is greater than or equal to 4.