@@ -1,3 +1,8 @@
+2006-06-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Filename completion): Explain how to enable
+	`partial-completion-mode' temporarily.
+
 2006-05-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Frequently Asked Questions): Disable zsh zle.
